fixed config alignment on instruments page

--- a/AppEngine/static/css/oscope.css
+++ b/AppEngine/static/css/oscope.css
@@ -236,7 +236,6 @@ h3 {
     position: relative;
     top: 18px;
     left: 25px;
-    top: 35px;
     color: white;
     font-family: 'nexa_lightregular';
     font-size: 80%;
